# ORB-SLAM3-Pi

./: .gitignore  CMakeLists.txt  KeyFrameTrajectory.txt  ldso_data_converter.py  monitor_usage.py  mp_to_ply.py  output.ply  output_trajectory.ply  overlay.py  pointcloud.txt  ref_pointcloud.txt
Examples/Monocular/: TUM1.yaml  live.yaml  live_mono_slam.cc  main.cc  mono_euroc.cc  mono_live.cc  monocular.yaml
Outputs/FPS/: fps_processing.txt
Outputs/Live/LDSO PC/1 Bad LC/: results.txt  results.txt.noloop  results.txt_stats.txt
Outputs/Live/LDSO PC/2 Bad LC/: results.txt  results.txt.noloop  results.txt_stats.txt
Outputs/Live/LDSO PC/3 Good LC/: results.txt  results.txt.noloop  results.txt_stats.txt
Outputs/Live/ORB PC/1 Bad LC/: KeyFrameTrajectory.txt  pointcloud.txt  ref_pointcloud.txt
Outputs/Live/ORB PC/2 Good LC/: KeyFrameTrajectory.txt  pointcloud.txt  ref_pointcloud.txt
Outputs/Live/ORB PC/3 Good/: KeyFrameTrajectory.txt  pointcloud.txt  ref_pointcloud.txt
Outputs/ORB vs LDSO/First/: KeyFrameTrajectory.txt
Outputs/ORB vs LDSO/MH03/: results.txt.noloop
Outputs/ORB vs LDSO/MH04/: results.txt  results.txt.noloop
Outputs/ORB vs LDSO/V101/: results.txt  results.txt.noloop
Outputs/ORB vs LDSO/V102/: results.txt  results.txt.noloop
Outputs/ORB vs LDSO/V103/: results.txt  results.txt.noloop
evaluation/: associate.py  evaluate_ate_scale.py
include/: System.h
src/: System.cc
